--- a/dews-hawaii-app/scripts/spi.ipynb
+++ b/dews-hawaii-app/scripts/spi.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "f62e111c",
    "metadata": {},
    "outputs": [
@@ -85,18 +85,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2024-09 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2024-10 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2024-11 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2024-12 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2025-01 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2025-02 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2025-03 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2025-04 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2025-05 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2025-06 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2025-07 ...\n",
-      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale001&date=2025-08 ...\n"
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2024-09 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2024-10 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2024-11 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2024-12 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2025-01 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2025-02 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2025-03 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2025-04 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2025-05 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2025-06 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2025-07 ...\n",
+      "Fetching https://api.hcdp.ikewai.org/raster?datatype=spi&period=month&timescale=timescale012&date=2025-08 ...\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta\n",
     "\n",
-    "scale = 1\n",
+    "scale = 12\n",
     "start_date = datetime(2024, 9, 1)   # Sept 2024\n",
     "end_date = datetime(2025, 8, 1)     # Aug 2025\n",
     "\n",
@@ -128,13 +128,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "f350ae0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "shapefile = \"../public/hawaii_climate_divisions.shp\"\n",
     "\n",
     "raster_folder = \"./data\"\n",
@@ -145,7 +143,7 @@
     "\n",
     "records = []\n",
     "\n",
-    "for tif in sorted(glob.glob(os.path.join(raster_folder, \"spi*.tif\"))):\n",
+    "for tif in sorted(glob.glob(os.path.join(raster_folder, f\"spi{scale:03d}*.tif\"))):\n",
     "    # Extract date from filename (spi001_2024-09.tif → 2024-09)\n",
     "    date = os.path.basename(tif).split(\"_\")[1].replace(\".tif\", \"\")\n",
     "    \n",
@@ -169,13 +167,13 @@
     "df = pd.DataFrame(records)\n",
     "df = df.pivot(index=\"division\", columns=\"date\", values=\"mean_spi\")\n",
     "df = df.reindex(sorted(df.columns), axis=1)\n",
-    "df.to_csv(\"division_spi_timeseries.csv\")\n",
+    "df.to_csv(f\"../public/division_spi{scale}.csv\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "a73dbbdc",
    "metadata": {},
    "outputs": [
@@ -185,23 +183,23 @@
      "text": [
       "date        2024-09   2024-10   2024-11   2024-12   2025-01   2025-02  \\\n",
       "division                                                                \n",
-      "Hawaiʻi    0.164475  0.039084  0.615427 -1.762296  0.516474 -1.215282   \n",
-      "Kahoolawe -0.560859 -0.067711 -0.315173 -0.980359  1.056914 -0.649988   \n",
-      "Kauaʻi    -0.738852 -0.171122 -0.914319 -1.164958  0.180476 -0.874774   \n",
-      "Lānaʻi    -0.370052 -0.245773 -0.757944 -1.625310  0.879548 -1.001471   \n",
-      "Maui      -0.602870 -0.045850 -0.911720 -1.758803  1.194903 -1.549807   \n",
-      "Molokaʻi  -0.960090 -0.435848 -0.405934 -1.657838  0.940091 -1.092378   \n",
-      "Oʻahu     -1.126451 -0.328286 -0.569652 -1.470650  1.172144 -1.042343   \n",
+      "Hawaiʻi   -0.037881  0.119707  0.156255  0.029552  0.153153  0.034498   \n",
+      "Kahoolawe -0.139777 -0.032876 -0.204780 -0.281347 -0.506336 -0.530695   \n",
+      "Kauaʻi     0.296000  0.232871 -0.212814 -0.599307 -0.768473 -0.859197   \n",
+      "Lānaʻi    -0.126588 -0.045729 -0.234460 -0.373994 -0.823798 -0.897692   \n",
+      "Maui      -0.508126 -0.303986 -0.468384 -0.689602 -0.970109 -1.112548   \n",
+      "Molokaʻi  -0.215129 -0.137697 -0.291784 -0.514934 -0.797169 -0.941964   \n",
+      "Oʻahu      0.251069  0.466929  0.185043 -0.173402 -0.133351 -0.257141   \n",
       "\n",
       "date        2025-03   2025-04   2025-05   2025-06   2025-07   2025-08  \n",
       "division                                                               \n",
-      "Hawaiʻi   -0.105839 -0.209279 -0.126939  0.233570 -0.522495 -0.758712  \n",
-      "Kahoolawe -0.726587  2.042276 -0.700550  0.171366 -0.556886 -0.535833  \n",
-      "Kauaʻi    -0.754501  1.323397  0.633320  0.085576 -0.371316 -1.376802  \n",
-      "Lānaʻi    -0.344207  1.098010 -0.620314 -0.938494 -0.616955 -0.827838  \n",
-      "Maui      -1.098805  0.149581 -0.705378 -0.809284 -0.676376 -1.111542  \n",
-      "Molokaʻi  -1.148683 -0.059361 -0.646680 -0.400107 -0.973455 -0.740672  \n",
-      "Oʻahu     -0.544678  1.031631  0.377174 -0.515001 -0.366695 -1.787031  \n"
+      "Hawaiʻi    0.190834  0.182623 -0.052502 -0.007167 -0.046251 -0.683822  \n",
+      "Kahoolawe -0.437860 -0.150719 -0.209612 -0.212079 -0.206543 -0.320421  \n",
+      "Kauaʻi    -0.639868 -1.425405 -1.558343 -1.472391 -1.351634 -1.262945  \n",
+      "Lānaʻi    -0.639938 -0.557560 -0.664799 -0.645653 -0.635198 -0.808631  \n",
+      "Maui      -0.950446 -0.901679 -1.032201 -1.054337 -1.034700 -1.377348  \n",
+      "Molokaʻi  -0.832270 -0.906089 -1.046686 -1.016598 -0.998548 -1.209971  \n",
+      "Oʻahu      0.013671 -0.067839 -0.953039 -0.926734 -0.867430 -1.088195  \n"
      ]
     }
    ],
@@ -216,7 +214,7 @@
     "\n",
     "records = []\n",
     "\n",
-    "for tif in sorted(glob.glob(os.path.join(raster_folder, \"spi*.tif\"))):\n",
+    "for tif in sorted(glob.glob(os.path.join(raster_folder, f\"spi{scale:03d}*.tif\"))):\n",
     "    # Extract date from filename (spi001_2024-09.tif → 2024-09)\n",
     "    date = os.path.basename(tif).split(\"_\")[1].replace(\".tif\", \"\")\n",
     "    \n",
@@ -240,21 +238,13 @@
     "df = pd.DataFrame(records)\n",
     "df = df.pivot(index=\"division\", columns=\"date\", values=\"mean_spi\")\n",
     "df = df.reindex(sorted(df.columns), axis=1)\n",
-    "df.to_csv(\"../public/island_spi_timeseries.csv\")\n",
+    "df.to_csv(f\"../public/island_spi{scale}.csv\")\n",
     "print(df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8761004e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "44d7542f",
    "metadata": {},
    "outputs": [
@@ -263,14 +253,15 @@
      "output_type": "stream",
      "text": [
       "date       state   2024-09   2024-10   2024-11   2024-12   2025-01   2025-02  \\\n",
-      "value  statewide -0.185488 -0.050791  0.115566 -1.668572  0.656251 -1.193424   \n",
+      "value  statewide -0.045008  0.098565  0.024834 -0.161592 -0.150209 -0.269035   \n",
       "\n",
-      "date    2025-03   2025-04   2025-05   2025-06   2025-07   2025-08  \n",
-      "value -0.371624  0.136254 -0.114843 -0.023033 -0.532988 -0.950657  \n"
+      "date    2025-03   2025-04   2025-05   2025-06  2025-07   2025-08  \n",
+      "value -0.095722 -0.171698 -0.439413 -0.401593 -0.40669 -0.875027  \n"
      ]
     }
    ],
    "source": [
+    "#statewide\n",
     "shapefile = \"../public/Coastline.shp\"\n",
     "raster_folder = \"./data\"\n",
     "\n",
@@ -280,7 +271,7 @@
     "\n",
     "records = []\n",
     "\n",
-    "for tif in sorted(glob.glob(os.path.join(raster_folder, \"spi*.tif\"))):\n",
+    "for tif in sorted(glob.glob(os.path.join(raster_folder, f\"spi{scale:03d}*.tif\"))):\n",
     "    # Extract date from filename (spi001_2024-09.tif → 2024-09)\n",
     "    date = os.path.basename(tif).split(\"_\")[1].replace(\".tif\", \"\")\n",
     "    \n",
@@ -302,7 +293,7 @@
     "# Pivot to wide format: one row (statewide), months as columns\n",
     "df = pd.DataFrame(records).set_index(\"date\").T\n",
     "df.insert(0, \"state\", \"statewide\")  # add proper state column\n",
-    "df.to_csv(\"../public/statewide_spi_timeseries.csv\", index=False)\n",
+    "df.to_csv(f\"../public/statewide_spi{scale}.csv\", index=False)\n",
     "\n",
     "print(df)"
    ]
